assets/custom.css
.markdown {
  font-size: 12px;
}

.markdown h1 {
  font-size: 2em;
}

.markdown h2 {
  font-size: 1.7em;
}

.markdown h3 {
  font-size: 1.5em;
}

.markdown h4 {
  font-size: 1.3em;
}

.markdown h5 {
  font-size: 1.1em;
}

.markdown h6 {
  font-size: 1.0em;
}

.markdown h1, .markdown h2, .markdown h3, .markdown h4, .markdown h5, .markdown h6 {
  font-weight: bold;
  color: grey;
}

